# boids

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
inc/: a.h  boid.h  camera_trackball.h  gl_utils.h  moving_object.h  obstacle.h  target.h
src/: CMakeLists.txt  aaaa.cpp  boid.cpp  camera_trackball.cpp  gl_utils.cpp  moving_object.cpp  obstacle.cpp  target.cpp
